src/modules/create-map/modules/AddCoordinates/CoordinateForm/coordinateDisplay.module.scss
.container {
    display: flex;
    position: relative;
    flex-direction: column;
    padding: 30px 20px 20px 20px;
    font-size: 15px;
    color: black;
    background-color: white;
    border: 1px solid black;
    border-radius: 3px;
}

.buttons {
    position: absolute;
    display: flex;
    flex-direction: row;
    top: 0;
    right: 0;
    padding: 5px;

    > button {
        cursor: pointer;
        margin-left: 5px;
    }
}

